--- a/04_YoutubeClone/package.json
+++ b/04_YoutubeClone/package.json
@@ -2,7 +2,7 @@
   "name": "youtube-clone",
   "version": "1.0.0",
   "description": "a backensd project useing MERN",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js"
@@ -10,6 +10,7 @@
   "author": "souvik maity",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.5"
   }
 }
